First implementation of username check

--- a/pcgf/ajaxregistrationcheck/styles/all/template/event/ucp_register_credentials_after.html
+++ b/pcgf/ajaxregistrationcheck/styles/all/template/event/ucp_register_credentials_after.html
@@ -4,11 +4,11 @@
 <div id="pcgf-ajaxregistrationcheck-password" class="inline"></div>
 <div id="pcgf-ajaxregistrationcheck-confirm-password" class="inline"></div>
 <script type="text/javascript">
-    var pcgfAJAXRegistrationCheckUsernameTaken = '{LA_USERNAME_TAKEN_USERNAME}';
-    var pcgfAJAXRegistrationCheckUsernameDisallowed = '{LA_USERNAME_DISALLOWED_USERNAME}';
+    var pcgfAJAXRegistrationCheckLoading = '{LA_LOADING}...';
     var pcgfAJAXRegistrationCheckUsernameMin = '{PCGF_AJAXREGISTRATIONCHECK_USERNAME_MIN}';
     var pcgfAJAXRegistrationCheckUsernameMax = '{PCGF_AJAXREGISTRATIONCHECK_USERNAME_MAX}';
     var pcgfAJAXRegistrationCheckUsernameRule = '{PCGF_AJAXREGISTRATIONCHECK_USERNAME_RULE}';
     var pcgfAJAXRegistrationCheckUsernameInvalidBoundaries = '{PCGF_AJAXREGISTRATIONCHECK_USERNAME_INVALID_BOUNDARIES}';
+    var pcgfAJAXRegistrationCheckUsernameCheckLink = '{PCGF_AJAXREGISTRATIONCHECK_CHECK_USERNAME_LINK}';
 </script>
 <!-- INCLUDEJS @pcgf_ajaxregistrationcheck/javascript/ajaxregistrationcheck.js -->
