--- a/pcgf/ajaxregistrationcheck/styles/all/theme/ajaxregistrationcheck.css
+++ b/pcgf/ajaxregistrationcheck/styles/all/theme/ajaxregistrationcheck.css
@@ -1,4 +1,256 @@
 div.inline {
     display: inline-block;
     margin-left: 10px;
+    padding-left: 26px;
+}
+
+div.invalid {
+    background: url("images/invalid.png") no-repeat;
+    background-size: contain;
+    color: rgb(255, 0, 0);
+}
+
+div.valid {
+    background: url("images/valid.png") no-repeat;
+    background-size: contain;
+    color: rgb(0, 200, 0);
+}
+
+div.loading-circle {
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    position: relative;
+}
+
+div.loading-circle div.circle {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
+div.loading-circle div.circle:before {
+    content: '';
+    display: block;
+    margin: 0 auto;
+    width: 15%;
+    height: 15%;
+    background-color: rgb(51, 51, 51);
+    border-radius: 100%;
+    -moz-animation: circleFadeDelay 1.2s infinite ease-in-out both;
+    -o-animation: circleFadeDelay 1.2s infinite ease-in-out both;
+    -webkit-animation: circleFadeDelay 1.2s infinite ease-in-out both;
+    animation: circleFadeDelay 1.2s infinite ease-in-out both;
+}
+
+div.loading-circle div.circle2 {
+    -moz-transform: rotate(30deg);
+    -ms-transform: rotate(30deg);
+    -o-transform: rotate(30deg);
+    -webkit-transform: rotate(30deg);
+    transform: rotate(30deg);
+}
+
+div.loading-circle div.circle3 {
+    -moz-transform: rotate(60deg);
+    -ms-transform: rotate(60deg);
+    -o-transform: rotate(60deg);
+    -webkit-transform: rotate(60deg);
+    transform: rotate(60deg);
+}
+
+div.loading-circle div.circle4 {
+    -moz-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+    -webkit-transform: rotate(90deg);
+    transform: rotate(90deg);
+}
+
+div.loading-circle div.circle5 {
+    -moz-transform: rotate(120deg);
+    -ms-transform: rotate(120deg);
+    -o-transform: rotate(120deg);
+    -webkit-transform: rotate(120deg);
+    transform: rotate(120deg);
+}
+
+div.loading-circle div.circle6 {
+    -moz-transform: rotate(150deg);
+    -ms-transform: rotate(150deg);
+    -o-transform: rotate(150deg);
+    -webkit-transform: rotate(150deg);
+    transform: rotate(150deg);
+}
+
+div.loading-circle div.circle7 {
+    -moz-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    -o-transform: rotate(180deg);
+    -webkit-transform: rotate(180deg);
+    transform: rotate(180deg);
+}
+
+div.loading-circle div.circle8 {
+    -moz-transform: rotate(210deg);
+    -ms-transform: rotate(210deg);
+    -o-transform: rotate(210deg);
+    -webkit-transform: rotate(210deg);
+    transform: rotate(210deg);
+}
+
+div.loading-circle div.circle9 {
+    -moz-transform: rotate(240deg);
+    -ms-transform: rotate(240deg);
+    -o-transform: rotate(240deg);
+    -webkit-transform: rotate(240deg);
+    transform: rotate(240deg);
+}
+
+div.loading-circle div.circle10 {
+    -moz-transform: rotate(270deg);
+    -ms-transform: rotate(270deg);
+    -o-transform: rotate(270deg);
+    -webkit-transform: rotate(270deg);
+    transform: rotate(270deg);
+}
+
+div.loading-circle div.circle11 {
+    -moz-transform: rotate(300deg);
+    -ms-transform: rotate(300deg);
+    -o-transform: rotate(300deg);
+    -webkit-transform: rotate(300deg);
+    transform: rotate(300deg);
+}
+
+div.loading-circle div.circle12 {
+    -moz-transform: rotate(330deg);
+    -ms-transform: rotate(330deg);
+    -o-transform: rotate(330deg);
+    -webkit-transform: rotate(330deg);
+    transform: rotate(330deg);
+}
+
+div.loading-circle div.circle2:before {
+    -moz-animation-delay: -1.1s;
+    -o-animation-delay: -1.1s;
+    -webkit-animation-delay: -1.1s;
+    animation-delay: -1.1s;
+}
+
+div.loading-circle div.circle3:before {
+    -moz-animation-delay: -1s;
+    -o-animation-delay: -1s;
+    -webkit-animation-delay: -1s;
+    animation-delay: -1s;
+}
+
+div.loading-circle div.circle4:before {
+    -moz-animation-delay: -0.9s;
+    -o-animation-delay: -0.9s;
+    -webkit-animation-delay: -0.9s;
+    animation-delay: -0.9s;
+}
+
+div.loading-circle div.circle5:before {
+    -moz-animation-delay: -0.8s;
+    -o-animation-delay: -0.8s;
+    -webkit-animation-delay: -0.8s;
+    animation-delay: -0.8s;
+}
+
+div.loading-circle div.circle6:before {
+    -moz-animation-delay: -0.7s;
+    -o-animation-delay: -0.7s;
+    -webkit-animation-delay: -0.7s;
+    animation-delay: -0.7s;
+}
+
+div.loading-circle div.circle7:before {
+    -moz-animation-delay: -0.6s;
+    -o-animation-delay: -0.6s;
+    -webkit-animation-delay: -0.6s;
+    animation-delay: -0.6s;
+}
+
+div.loading-circle div.circle8:before {
+    -moz-animation-delay: -0.5s;
+    -o-animation-delay: -0.5s;
+    -webkit-animation-delay: -0.5s;
+    animation-delay: -0.5s;
+}
+
+div.loading-circle div.circle9:before {
+    -moz-animation-delay: -0.4s;
+    -o-animation-delay: -0.4s;
+    -webkit-animation-delay: -0.4s;
+    animation-delay: -0.4s;
+}
+
+div.loading-circle div.circle10:before {
+    -moz-animation-delay: -0.3s;
+    -o-animation-delay: -0.3s;
+    -webkit-animation-delay: -0.3s;
+    animation-delay: -0.3s;
+}
+
+div.loading-circle div.circle11:before {
+    -moz-animation-delay: -0.2s;
+    -o-animation-delay: -0.2s;
+    -webkit-animation-delay: -0.2s;
+    animation-delay: -0.2s;
+}
+
+div.loading-circle div.circle12:before {
+    -moz-animation-delay: -0.1s;
+    -o-animation-delay: -0.1s;
+    -webkit-animation-delay: -0.1s;
+    animation-delay: -0.1s;
+}
+
+@-moz-keyframes circleFadeDelay {
+    0%, 39%, 100% {
+        opacity: 0;
+    }
+    40% {
+        opacity: 1;
+    }
+}
+
+@-ms-keyframes circleFadeDelay {
+    0%, 39%, 100% {
+        opacity: 0;
+    }
+    40% {
+        opacity: 1;
+    }
+}
+
+@-o-keyframes circleFadeDelay {
+    0%, 39%, 100% {
+        opacity: 0;
+    }
+    40% {
+        opacity: 1;
+    }
+}
+
+@-webkit-keyframes circleFadeDelay {
+    0%, 39%, 100% {
+        opacity: 0;
+    }
+    40% {
+        opacity: 1;
+    }
+}
+
+@keyframes circleFadeDelay {
+    0%, 39%, 100% {
+        opacity: 0;
+    }
+    40% {
+        opacity: 1;
+    }
 }
