Add email check

--- a/pcgf/ajaxregistrationcheck/styles/all/template/event/ucp_register_credentials_after.html
+++ b/pcgf/ajaxregistrationcheck/styles/all/template/event/ucp_register_credentials_after.html
@@ -7,8 +7,10 @@
     var pcgfAJAXRegistrationCheckLoading = '{LA_LOADING}...';
     var pcgfAJAXRegistrationCheckUsernameMin = '{PCGF_AJAXREGISTRATIONCHECK_USERNAME_MIN}';
     var pcgfAJAXRegistrationCheckUsernameMax = '{PCGF_AJAXREGISTRATIONCHECK_USERNAME_MAX}';
-    var pcgfAJAXRegistrationCheckUsernameRule = '{PCGF_AJAXREGISTRATIONCHECK_USERNAME_RULE}';
+    var pcgfAJAXRegistrationCheckUsernameRule = "{PCGF_AJAXREGISTRATIONCHECK_USERNAME_RULE}";
     var pcgfAJAXRegistrationCheckUsernameInvalidBoundaries = '{PCGF_AJAXREGISTRATIONCHECK_USERNAME_INVALID_BOUNDARIES}';
+    var pcgfAJAXRegistrationCheckEMailInvalid = '{LA_PCGF_AJAXREGISTRATIONCHECK_EMAIL_INVALID}';
     var pcgfAJAXRegistrationCheckUsernameCheckLink = '{PCGF_AJAXREGISTRATIONCHECK_CHECK_USERNAME_LINK}';
+    var pcgfAJAXRegistrationCheckEMailCheckLink = '{PCGF_AJAXREGISTRATIONCHECK_CHECK_EMAIL_LINK}';
 </script>
 <!-- INCLUDEJS @pcgf_ajaxregistrationcheck/javascript/ajaxregistrationcheck.js -->
