Add password security check

--- a/pcgf/ajaxregistrationcheck/styles/all/template/event/ucp_register_credentials_after.html
+++ b/pcgf/ajaxregistrationcheck/styles/all/template/event/ucp_register_credentials_after.html
@@ -1,3 +1,5 @@
+<input id="pcgf-ajaxregistrationcheck-sfs-field" name="sfs" class="hidden" type="text"/>
+<div id="pcgf-ajaxregistrationcheck-sfs" class="sfs invalid"></div>
 <div id="pcgf-ajaxregistrationcheck-username" class="inline"></div>
 <div id="pcgf-ajaxregistrationcheck-email" class="inline"></div>
 <div id="pcgf-ajaxregistrationcheck-password" class="inline"></div>
@@ -15,7 +17,6 @@
     var pcgfAJAXRegistrationCheckPasswordMin = '{PCGF_AJAXREGISTRATIONCHECK_PASSWORD_MIN}';
     var pcgfAJAXRegistrationCheckPasswordMax = '{PCGF_AJAXREGISTRATIONCHECK_PASSWORD_MAX}';
     var pcgfAJAXRegistrationCheckPasswordRule = "{PCGF_AJAXREGISTRATIONCHECK_PASSWORD_RULE}";
-    var pcgfAJAXRegistrationCheckPasswordValid = '{LA_PCGF_AJAXREGISTRATIONCHECK_PASSWORD_OK}';
     var pcgfAJAXRegistrationCheckPasswordInvalid = '{PCGF_AJAXREGISTRATIONCHECK_PASSWORD_INVALID_BOUNDARIES}';
     var pcgfAJAXRegistrationCheckConfirmPasswordValid = '{LA_AJAXREGISTRATIONCHECK_CONFIRM_PASSWORD_OK}';
     var pcgfAJAXRegistrationCheckConfirmPasswordInvalid = '{LA_NEW_PASSWORD_ERROR}';
